--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
+  "name": "api-decoder",
+  "version": "1.0.0",
+  "description": "API to decode Base64 messages and verify hash",
+  "main": "index.js",
+  "type": "commonjs",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "author": "Your Name",
+  "license": "MIT",
   "dependencies": {
-    "better-sqlite3": "^12.4.1",
-    "body-parser": "^2.2.0",
-    "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^4.18.2",
+    "express-rate-limit": "^8.1.0",
+    "validator": "^13.15.15"
   }
 }
